Fixed cv.css's hover issue. Previously hover wouldn't work after collapsing the dropdown button once.

--- a/src/css/cv.css
+++ b/src/css/cv.css
@@ -48,10 +48,9 @@ h4 {
     width: 100%;
     height: 50px;
     cursor:pointer;
-    background-color: #00000017;
-    opacity: .8;
-    transition: opacity 200ms;
-    transition: background-color 200ms;
+    background-color: #e6e6e6;
+    filter: opacity(.7);
+    transition: 100ms;
     margin-bottom: 10px;
 }
 
@@ -75,8 +74,7 @@ h4 {
 
 
 .dropdown:hover {
-    opacity: 1;
-    background-color: rgba(0, 0, 0, 0.171);
+    filter: opacity(1);
 }
 
 .subtext {
